fixed radio alignment on mobile

--- a/css/late.css
+++ b/css/late.css
@@ -27,6 +27,10 @@ body {
     max-width: 600px;
     width: 100%;
     height: fit-content;
+
+    @media (max-width: 768px) {
+        width: auto;
+    }
 }
 
 .win98-audio {
